# src/public/swagger/swagger.json
@@ -7,7 +7,7 @@ info:
     email: admin@lunaproject.com
   version: 1.0.0
 paths:
-  /LunaProject/public/transaction:
+  /transfer_app/src/public/transaction:
     post:
       tags:
         - transaction
@@ -37,7 +37,7 @@ paths:
           description: 'Transação não autorizada ou falha na autenticação da api.'
         '500':
           description: 'Erro interno da api. Entre em contato com o responsável.'
-  /LunaProject/public/login:
+  /transfer_app/src/public/login:
     post:
       tags:
         - user
